K8S/command-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-pod
  template:
    metadata:
      labels:
        app: command-pod
    spec:
      containers:
      - name:  command-pod
        image: cleverson85/commandservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: command-service
spec:
  type: NodePort
  selector:
    app: command-pod
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: command-pod
  ports:
  - name: command-clusterip-service
    port: 80
    targetPort: 80
