K8S/platform-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-pod
  template:
    metadata:
      labels:
        app: platform-pod
    spec:
      containers:
      - name: platform-pod
        image: cleverson85/platformservice:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: platform-service
spec:
  type: NodePort
  selector:
    app: platform-pod
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: platform-pod
  ports:
  - name: platform-clusterip-service
    port: 80
    targetPort: 80
