K8S/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: 'true'
  labels:
    name: nginx-service
spec:
  rules:
  - host: acme.com
    http:
      paths:
        - path: /api/platform
          pathType: Prefix
          backend:
            service:
              name: platform-clusterip-service
              port: 
                number: 80
        - path: /api/c/platform
          pathType: Prefix
          backend:
            service:
              name: command-clusterip-service
              port: 
                number: 80
